tests/programs/type-errors/impl_missing_impl.rice
interface Bar {
  fn bloop(Self, int) -> int;
}

struct Foo(int);

fn main() { 
  (new Foo(0)).bloop(0); ()
}